--- a/thisweekend.html
+++ b/thisweekend.html
@@ -97,7 +97,7 @@
 
     <div class="img">
 		<div class="title">DIY Pottery & Ceramics</div>	
-		<a href="a1.html"><img src="images/a1.JPG" alt="a1"></a>
+		<a href="a1.html"><img src="images/a1.jpg" alt="a1"></a>
 		<div class="desc">15/09/2018<br>Pottery classes for children and adults in Takapuna and Devonport area on the North Shore.</div>	
 	</div>
 
